<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    style="@style/AppTheme"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.vasili.sillyvmovielist.activities.EditActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar_edit"
            layout="@layout/toolbar_edit"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/title_edit_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/side_padding"
            android:layout_marginRight="@dimen/side_padding"
            android:layout_marginTop="@dimen/side_padding"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/title_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_title"
                android:inputType="text"
                android:textSize="16sp"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/year_edit_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/side_padding"
            android:layout_marginRight="@dimen/side_padding"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/year_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/release_year"
                android:inputType="phone"
                android:textSize="16sp"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/body_edit_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/side_padding"
            android:layout_marginRight="@dimen/side_padding"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/body_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:hint="@string/edit_body"
                android:inputType="textMultiLine"
                android:minLines="2"
                android:textSize="16sp"/>
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/side_padding"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/url_edit_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/url_edit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/edit_image_url"
                    android:inputType="textUri"
                    android:textSize="16sp"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <ImageView

            android:id="@+id/image_view_edit_activity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/side_padding"
            android:contentDescription="@string/displayed_image"
            android:onClick="onImageClick"
            android:src="@drawable/image_background"/>
    </LinearLayout>
</LinearLayout>
